# Velora

./: .gitignore  README.md  build-all.bat  build-all.sh  makefile  meson.build
engine/: build.bat  build.sh  makefile
engine/src/: defines.h  entry.h  game_types.h  test.c
engine/src/container/: darray.c  darray.h  map.c  map.h
engine/src/core/: application.c  application.h  event.c  event.h  input.c  input.h  logger.c  logger.h  stb_image.c  vecs.c  vecs.h  vmemory.c  vmemory.h
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c  xdg-shell-client-protocol.h  xdg-shell-protocol.c
engine/src/render/: velora_render.h  velora_vulkan_render.c
engine/src/shaders/: vert.glsl
engine/src/testing/: test_entry.c  vmemory_test.c  vmemory_test.h
engine/src/utils/: vfile.c  vfile.h  vgltf.c  vgltf.h  vimport.c  vimport.h  vint.c  vint.h  vjson.c  vjson.h  vmath.c  vmath.h  vstring.c  vstring.h
src/: defines.h  entry.c  meson.build
src/binaries/: meson.build
src/binaries/game/: application.c  application.h  entry.c  meson.build
src/binaries/lib_test/: main.c  meson.build
src/binaries/testing/: darray_test.c  darray_test.h  test_entry.c  vmemory_test.c  vmemory_test.h
src/common/: defines.h
src/common/core/: event.h  logger.h
src/common/core/container/: darray.h
src/common/core/memory/: vmemory.h
src/common/core/platform/: platform.h
src/common/core/utils/: vfile.h  vgltf.h  vimage.h  vjson.h  vmath.h
src/common/ecs/: vcamera.h  vecs.h  vrenderable.h  vtransform.h
src/common/render/: velora_render.h  vmaterial.h  vmesh.h  vskin.h
src/components/: meson.build  vcamera.c  vcamera.h  vrenderable.c  vrenderable.h  vtransform.c  vtransform.h
src/container/: darray.c  darray.h  map.c  map.h  meson.build
src/core/: application.c  application.h  asserts.h  event.c  event.h  input.c  input.h  logger.c  logger.h  meson.build  stb_image.c  stb_image.h  vecs.c  vecs.h  vmemory.c  vmemory.h
src/libraries/: meson.build
src/libraries/core/: event.c  input.c  logger.c  meson.build  stb_image.c  vmemory.c
src/libraries/core/container/: darray.c  map.c
src/libraries/core/memory/: meson.build
src/libraries/core/platform/: meson.build  platform_linux.c  platform_win32.c
src/libraries/core/utils/: vfile.c  vgltf.c  vimage.c  vjson.c  vmath.c  vstring.c
src/libraries/ecs/: meson.build  vcamera.c  vecs.c  vrenderable.c  vskin.c  vtransform.c
src/libraries/platform/: meson.build  platform_linux.c
src/libraries/render/: meson.build  vmaterial.c  vmesh.c  vskin.c
src/libraries/vulkan_render/: meson.build  velora_vulkan_render.c
src/libraries/vulkan_render/shaders/: frag.glsl  vert.glsl
src/platform/: meson.build  platform.h  platform_linux.c  platform_win32.c
src/render/: meson.build  velora_render.h  velora_vulkan_render.c  vmaterial.c  vmaterial.h  vmesh.c  vmesh.h
src/shaders/: frag.glsl  meson.build  vert.glsl
src/testing/: darray_test.c  darray_test.h
src/utils/: meson.build  vfile.c  vgltf.c  vgltf.h  vimage.c  vimport.c  vimport.h  vjson.c  vjson.h  vmath.c  vmath.h  vstring.h
subprojects/: libxkbcommon.wrap  vulkan-headers.wrap  vulkan-memory-allocator.wrap
testbed/: build.bat
testbed/src/: entry.c  game.c  game.h  main.c
