subdir('components')
subdir('container')
subdir('core')
subdir('platform')
subdir('render')
subdir('shaders')
subdir('utils')

out_src_files = files('entry.c')
out_src_files += out_component_files
out_src_files += out_containers_files
out_src_files += out_core_files
out_src_files += out_platform_files
out_src_files += out_render_files
out_src_files += out_utils_files
out_src_files += out_shader_target